--- a/cfn.yml
+++ b/cfn.yml
@@ -132,6 +132,8 @@ Resources:
                 echo "Finished setting up notebook instance"
                 EOF1
 
+                chown ec2-user:ec2-user /home/ec2-user/SageMaker/fastai-setup.sh && chmod 755 /home/ec2-user/SageMaker/fastai-setup.sh 
+
                 sudo -i -u ec2-user bash <<\EOF
                 fastaiVersion="${FastaiVersion}"
                 if [[ "${!fastaiVersion}" == "0.7" ]]; then
@@ -143,12 +145,10 @@ Resources:
                   echo "Clone fast.ai for v3 course"
                   git clone https://github.com/fastai/course-v3 /home/ec2-user/SageMaker/fastai-course-v3
                 fi
-                EOF
 
-                chown ec2-user:ec2-user /home/ec2-user/SageMaker/fastai-setup.sh && chmod 755 /home/ec2-user/SageMaker/fastai-setup.sh                  
-
-                mkdir -p /home/ec2-user/SageMaker/.torch && chown -R ec2-user:ec2-user /home/ec2-user/.torch 
-                mkdir -p /home/ec2-user/SageMaker/.fastai && chown -R ec2-user:ec2-user /home/ec2-user/.fastai    
+                mkdir -p /home/ec2-user/SageMaker/.torch
+                mkdir -p /home/ec2-user/SageMaker/.fastai
+                EOF                              
 
       OnStart:
         - Content:
